Fixing text spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3139,7 +3139,7 @@ input, select, textarea {
 			}
 
 			#sidebar1 .button-group {
-  			  margin-bottom: 1em; 
+  			  margin-bottom: 2em; 
 			}
 
 			#sidebar2 h3 {
